@@ -15,12 +15,7 @@
 #include "neural++.hpp"
 using namespace neuralpp;
 
-/**
- * @brief Constructor
- * @param sz Size of the layer
- * @param a Activation function
- * @param d Its derivate
- */
+namespace neuralpp  {
 Layer::Layer (size_t sz, double(*a)(double), double(*d)(double))  {
 	for (size_t i=0; i<sz; i++)  {
 		Neuron n(a,d);
@@ -31,30 +26,16 @@ Layer::Layer (size_t sz, double(*a)(double), double(*d)(double))  {
 	deriv=d;
 }
 
-/**
- * @brief Alternative constructor. It directly gets a vector of neurons to build
- *  the layer
- */
 Layer::Layer (vector< Neuron > &el, double (*a)(double), double(*d)(double))  {
 	elements=el;
 	actv_f=a;
 	deriv=d;
 }
 
-/**
- * @return Number of neurons in the layer
- */
 size_t Layer::size()  { return elements.size(); }
 
-/**
- * @brief Redefinition for operator []. It gets the neuron at <i>i</i>
- */
 Neuron& Layer::operator[] (size_t i)  { return elements[i]; }
 
-/**
- * @brief It links a layer to another
- * @param l Layer to connect to the current as input layer
- */
 void Layer::link (Layer& l)  {
 	srand ((unsigned) time(NULL));
 
@@ -71,27 +52,16 @@ void Layer::link (Layer& l)  {
 	}
 }
 
-/**
- * @brief It sets a vector of propagation values to all its neurons
- * @param v Vector of values to write as propagation values
- */
 void Layer::setProp (vector<double> &v)  {
 	for (size_t i=0; i<size(); i++)
 		elements[i].setProp(v[i]);
 }
 
-/** 
- * @brief It sets a vector of activation values to all its neurons
- * @param v Vector of values to write as activation values
- */
 void Layer::setActv (vector<double> &v)  {
 	for (size_t i=0; i<size(); i++)
 		elements[i].setActv(v[i]);
 }
 
-/**
- * @brief It propagates its activation values to the output layers
- */
 void Layer::propagate()  {
 	for (size_t i=0; i<size(); i++)  {
 		Neuron *n = &(elements[i]);
@@ -99,5 +69,6 @@ void Layer::propagate()  {
 		n->setProp(n->propagate());
 		n->setActv( actv_f(n->getProp()) );
 	}
+}
 }
 
