@@ -12,21 +12,14 @@
  **************************************************************************************************/
 
 #include "neural++.hpp"
-using namespace neuralpp;
 
-/**
- * @brief Constructor
- * @param a Activation function
- * @param d Its derivate
- */
+namespace neuralpp  {
+
 Neuron::Neuron (double (*a)(double), double (*d)(double))  {
 	actv_f=a;
 	deriv=d;
 }
 
-/**
- * @brief Alternative constructor, that gets also the synapsis linked to the neuron
- */
 Neuron::Neuron (vector< Synapsis > i, vector< Synapsis > o, double (*a)(double), double(*d)(double))  {
 	in=i;
 	out=o;
@@ -35,64 +28,32 @@ Neuron::Neuron (vector< Synapsis > i, vector< Synapsis > o, double (*a)(double),
 	deriv=d;
 }
 
-/**
- * @brief Gets the i-th synapsis connected on the input of the neuron
- */
 Synapsis& Neuron::synIn (size_t i)  { return in[i]; }
 
-/**
- * @brief Gets the i-th synapsis connected on the output of the neuron
- */
 Synapsis& Neuron::synOut (size_t i)  { return out[i]; }
 
-/**
- * @brief It pushes a new input synapsis
- */
 void Neuron::push_in (Synapsis& s)  { in.push_back(s); }
 
-/**
- * @brief It pushes a new output synapsis
- */
 void Neuron::push_out (Synapsis& s)  { out.push_back(s); }
 
-/**
- * @brief Change the propagation value of the neuron
- */
 void Neuron::setProp (double val)  { prop_val=val; }
 
-/**
- * @brief Change the activation value of the neuron
- */
 void Neuron::setActv (double val)  { actv_val=actv_f(val); }
 
-/**
- * @return Number of input synapsis
- */
 size_t Neuron::nIn()  { return in.size(); }
 
-/**
- * @return Number of output synapsis
- */
 size_t Neuron::nOut()  { return out.size(); }
 
-/**
- * @brief It gets the propagation value of the neuron
- */
 double Neuron::getProp()  { return prop_val; }
 
-/**
- * @brief It gets the activation value of the neuron
- */
 double Neuron::getActv()  { return actv_val; }
 
-/**
- * @brief Propagate a neuron's activation value to the connected neurons
- */
 double Neuron::propagate()  {
 	double aux=0;
 
 	for (size_t i=0; i<nIn(); i++)
 		aux += (in[i].getWeight() * in[i].getIn()->actv_val);
 	return aux;
+}
 }
 
